--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,8 @@ html,
 body {
     margin: 0;
     min-width: 320px;
-    height: 100%;
-    overflow: hidden;
+    min-height: 100%;
+    overflow: auto;
     background: #f5f5f5;
     color: #111;
 }
